--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,6 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation "androidx.core:core-ktx:1.7.0"
+
+    implementation("androidx.core:core-splashscreen: 1.0.0-alpha01")
 }
