--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.0-beta02"
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha04"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
